# journal

./: CMakeLists.txt  NEWS  README.md  check.cmake  config.h.cmake
data/: CMakeLists.txt  journald.conf
data/completions/bash/: journalctl
data/completions/zsh/: _journalctl
data/sysctl/: 50-coredump.conf.cmake
data/systemd/: journal-flush.service.cmake  journald.service.cmake
data/tmpfiles/: journal.conf
include/: missing.h  sparse-endian.h
lib/: CMakeLists.txt  boot.h  compress.c  compress.h  journal-0.1.pc.cmake  journal-def.h  journal-file.c  journal-file.h  journal-send.c  journal-vacuum.c  journal-verify.c  journal.h  journal.pc.cmake  journal.sym  journal0.sym  macros.h  mmap-cache.c  sd-event.c  sd-event.h  sd-journal.c  sd-journal.h  utils.h  uuid.c  uuid.h
lib/hash/: CMakeLists.txt  hash.c  hash.h  hashbig.c  hashlittle.c  hashlittle2.c  hashword.c  hashword2.c  lookup3.h
lib/mmap/: CMakeLists.txt  mmap-cache.c  test-mmap-cache.c
lib/utils/: CMakeLists.txt  boot.c  boot.h  parse-bool.c  parse-uint.c  str.h  uuid.c  uuid.h
lib/utils/boot/: getid.c
lib/utils/str/: CMakeLists.txt  test-caseeq.c  test-copy.c  test-empty.c  test-eq.c
lib/utils/uuid/: equal.c  genrand.c  isnull.c  tostr.c
man/: coredumpctl.xml  custom-man.xsl  journal-fields.xml  journal-man.cmake  journalctl.xml  journald.conf.xml  journald.xml  sd-journal.xml  sd_journal_add_match.xml  sd_journal_get_cursor.xml  sd_journal_get_cutoff_realtime_usec.xml  sd_journal_get_data.xml  sd_journal_get_fd.xml  sd_journal_get_realtime_usec.xml  sd_journal_get_usage.xml  sd_journal_next.xml  sd_journal_open.xml  sd_journal_print.xml  sd_journal_query_unique.xml  sd_journal_seek_head.xml  sd_journal_stream_fd.xml
shared/: CMakeLists.txt  audit.h  conf-parser.c  conf-parser.h  env-util.c  env-util.h  fileio.c  fileio.h  log.c  log.h  logs-show.c  logs-show.h  mkdir.c  pager.c  path-util.c  path-util.h  time-util.c  time-util.h  util.c  util.h
src/: CMakeLists.txt
src/core/: conf-parser.c  conf-parser.h  journal-internal.h  journald-console.c  journald-gperf.gperf  journald-kmsg.c  journald-kmsg.h  journald-native.c  journald-native.h  journald-rate-limit.c  journald-rate-limit.h  journald-server.c  journald-server.h  journald-stream.c  journald-syslog.c  journald-syslog.h
src/coredump/: coredump.c
src/coredumpctl/: coredumpctl.c
src/journalctl/: CMakeLists.txt  journal-verify.c  journalctl.c  logs-show.c  logs-show.h  test-journal-verify.c
src/journald/: CMakeLists.txt  journald.c  test-epollfd.c
src/journald/core/: CMakeLists.txt  cmsg.h  epollfd.c  epollfd.h  hostname.h  kmsg.h  msg.h  native.c  native.h  run.h  seqnum.h  server.c  server.h  socket.c  socket.h  syslog.c  syslog.h
src/journald/core/cmsg/: decode.c
src/journald/core/hostname/: open.c  read.c
src/journald/core/kmsg/: close.c  decode.c  private.h  read.c
src/journald/core/msg/: decode.c  new.c  resize.c
src/journald/core/native/: close.c  open.c
src/journald/core/run/: chgroup.c  chuser.c  group.c  mkdir.c  user.c
src/journald/core/seqnum/: load.c  save.c
src/journald/core/server/: run.c  start.c  stop.c
src/journald/core/socket/: getsize.c  open.c  recvmsg.c  sendmsg.c  setsndbuf.c
src/journald/core/syslog/: close.c  open.c  run.c
test/: CMakeLists.txt  test-compress-benchmark.c  test-compress.c  test-journal-enum.c  test-journal-flush.c  test-journal-init.c  test-journal-interleaving.c  test-journal-match.c  test-journal-send.c  test-journal-stream.c  test-journal.c
